--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+@import "primereact/resources/themes/lara-light-indigo/theme.css";
+@import "primereact/resources/primereact.min.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -19,7 +22,11 @@
 
 @layer components {
   #Login-section {
-    @apply w-screen h-screen flex items-center justify-center bg-[url('/src/assets/images/ralph-ravi-kayden-FqqiAvJejto-unsplash.jpg')] bg-cover bg-center bg-no-repeat relative;
+    @apply w-screen h-screen flex items-center justify-center bg-[url('/src/assets/images/ralph-ravi-kayden-FqqiAvJejto-unsplash.jpg')] bg-cover bg-center bg-no-repeat relative overflow-hidden;
+  }
+
+  .form-control {
+    @apply border-b border-gray-300 w-full p-2 text-sm focus:border-primaryColor focus:outline-none;
   }
 }
 
